Make sure images with a caption do not overlap the content area

--- a/css/style-common.css
+++ b/css/style-common.css
@@ -59,3 +59,9 @@ ol {
 	li ol, li ul {
 		margin-bottom: 0;
 	}
+
+/*  WordPress stuff  */
+
+.wp-caption {
+	max-width: 100%;
+}
